--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>DO you love me? 🤗</h1>
-      <p>~mai tera hi hoo</p>
+      <h1>Will be you be my valentine Poopoooo? 🤗</h1>
+      <p>~Please bann jaoo naaa</p>
       <div class="btn">
         <a href="5.html">Yes</a>
         <a href="2.html" >No</a>
