--- a/2.html
+++ b/2.html
@@ -26,7 +26,7 @@
         src="https://tenor.com/embed.js"
       ></script>
       <h1>Soch le ache se! 🙄</h1>
-      <p>itte jldi nhi mtt bol🙄</p>
+      <p>itte jldi se reject mat karoo🙄</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
@@ -35,3 +35,4 @@
     </div>
   </body>
 </html>
+
