--- a/3.html
+++ b/3.html
@@ -28,8 +28,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>kyu aisa kr rahi hai dil se sochna ghadiii please 😣</p>
+      <h1>Ek aur baar Soch loo! aur ek baar chnace de raha huu😣</h1>
+      <p>kyu aisa kr rahe ho me dil se acha huu 😣</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
@@ -38,3 +38,4 @@
     </div>
   </body>
 </html>
+
