--- a/4.html
+++ b/4.html
@@ -30,8 +30,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>bht glt baat hai 😭</p>
+      <h1>Manja na! Kitna bhav khaoge meraaaa 😭</h1>
+      <p>bht glt baat hai galat kar rahe ho mere saath 😭</p>
 
       <div class="btn">
         <a href="5.html">Yes</a>
@@ -42,3 +42,4 @@
     <script src="./script.js"></script>
   </body>
 </html>
+
